--- a/HzOA/请假流程.xaml
+++ b/HzOA/请假流程.xaml
@@ -1,7 +1,7 @@
 ﻿<Activity mc:Ignorable="sads sap" x:Class="Duban.请假流程"
  xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities"
  xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:local="clr-namespace:WorkFlowConsole"
+ xmlns:local="clr-namespace:HzOA"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:mv="clr-namespace:Microsoft.VisualBasic;assembly=System"
  xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities"
