--- a/TenpowerTalk/MainWindow.xaml
+++ b/TenpowerTalk/MainWindow.xaml
@@ -38,7 +38,7 @@
                     <Image Width="12" Source="img/在线.png"></Image>
                     <TextBlock>在线</TextBlock>
                 </StackPanel>
-                <TextBlock Margin="4">点击我修改个性签名</TextBlock>
+                <TextBlock Text="{Binding User.Mark}" Margin="4"></TextBlock>
             </StackPanel>
         </DockPanel>
         <DockPanel DockPanel.Dock="Top" Margin="0,5,0,0">
@@ -84,7 +84,7 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Background="#f0ffff" Height="60"   >
+            <Button Click="Button_Click" Grid.Column="0" Background="#f0ffff" Height="60"   >
                 消息
             </Button>
             <Button Grid.Column="1" Background="#f0ffff"   >
