--- a/HzTalk/MainWindow.xaml
+++ b/HzTalk/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="TenpowerTalk.MainWindow"
+﻿<Window x:Class="HzTalk.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TenpowerTalk"
+        xmlns:local="clr-namespace:HzTalk"
         mc:Ignorable="d"
-        Title="艾泽拉斯吧" Height="600" Width="400" MinWidth="350" MinHeight="400" Background="#f0ffff">
+        Title="MainWindow" Height="350" Width="525">
     <Window.Resources>
         <Storyboard x:Key="xuanzhuang">
             <DoubleAnimation RepeatBehavior="Forever" From="0" To="360" Duration="0:0:1" Storyboard.TargetName="angleimg" Storyboard.TargetProperty="Angle"></DoubleAnimation>
@@ -14,18 +14,15 @@
     <Window.Triggers>
         <EventTrigger RoutedEvent="MouseEnter" SourceName="touxiangPanel">
             <BeginStoryboard Storyboard="{StaticResource xuanzhuang}">
-                
+
             </BeginStoryboard>
         </EventTrigger>
     </Window.Triggers>
     <Window.DataContext>
         <local:AutofacDataProvider ObjectType="{x:Type local:RootData}">
-            
+
         </local:AutofacDataProvider>
     </Window.DataContext>
-    <Window.CommandBindings>
-        <CommandBinding Executed="CommandBinding_Executed"  Command="{x:Static ApplicationCommands.New}"></CommandBinding>
-    </Window.CommandBindings>
     <DockPanel>
         <DockPanel DockPanel.Dock="Top"  >
             <StackPanel Orientation="Horizontal"  x:Name="touxiangPanel">
@@ -60,7 +57,8 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Button Grid.Column="0" Background="#f0ffff" BorderBrush="{x:Null}" BorderThickness="0">
-                <Image Width="40" Source="img/QQ.png"></Image></Button>
+                <Image Width="40" Source="img/QQ.png"></Image>
+            </Button>
             <Button Grid.Column="1" Background="#f0ffff" BorderBrush="{x:Null}" BorderThickness="0">
                 <Image Width="40" Source="img/雪人.png"></Image>
             </Button>
@@ -87,7 +85,7 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Click="Button_Click" Grid.Column="0" Background="#f0ffff" Height="60"   >
+            <Button Grid.Column="0" Background="#f0ffff" Height="60"   >
                 消息
             </Button>
             <Button Command="{x:Static ApplicationCommands.New}" Grid.Column="1" Background="#f0ffff"   >
