--- a/HzTalk/MainWindow.xaml
+++ b/HzTalk/MainWindow.xaml
@@ -39,6 +39,7 @@
                     <TextBlock>在线</TextBlock>
                 </StackPanel>
                 <TextBlock Text="{Binding User.Mark}" Margin="4"></TextBlock>
+                <TextBlock Text="{Binding User.LoginName}" Margin="4"></TextBlock>
             </StackPanel>
         </DockPanel>
         <DockPanel DockPanel.Dock="Top" Margin="0,5,0,0">
